# home-inventory-api

./: .env  .env-example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  test.db
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/handlers/: base.rs  house.rs  mod.rs  room.rs
api/src/models/: house.rs  item.rs  mod.rs  room.rs
api/src/routes/: mod.rs
api/templates/: base.html  house.html  houses.html  index.html  styles.css
entity/: Cargo.toml
entity/src/: house.rs  mod.rs  room.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_house.rs  m20240115_160419_create_room.rs
migrations/2023-11-19-065104_create_homes/: down.sql  up.sql
migrations/2023-12-28-134303_create_rooms/: up.sql
migrations/2024-01-07-051817_create_items/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
src/actions/: home.rs
src/api/: home.rs  house.rs  room.rs
src/app/: mod.rs
src/app/actions/: home.rs  item.rs  room.rs
src/app/api/: home.rs  item.rs  mod.rs  room.rs
src/app/db/: mod.rs
src/app/models/: home.rs  item.rs  room.rs
src/database/: prelude.rs
src/models/: house.rs
src/routes/: mod.rs
