[package]
name = "home-inventory-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"]}
shuttle-actix-web = "0.35.1"
shuttle-runtime = "0.35.1"
