[package]
name = "home-inventory-api"
version = "0.1.0"
authors = ["Jijo Bose <bosejijo@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "entity", "migration"]

[dependencies]
inventory-api = { path = "api" }
