[package]
name = "inventory-api"
version = "0.1.0"
authors = ["Jijo Bose <bosejijo@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
anyhow = "1.0.79"
chrono = "0.4.31"
dotenvy = "0.15.7"
dotenv = "0.15.0"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
env_logger = "0.11.0"
log = "0.4"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.1", features = ["net", "full"] }
sea-orm = { version = "0.12.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
